hphp/hack/test/typecheck/inout/bad_inout_use_arg4.php.exp
File "bad_inout_use_arg4.php", line 9, characters 7-22:
You cannot decorate this argument as inout (Parsing[1002])
File "bad_inout_use_arg4.php", line 9, characters 13-23:
Arguments for inout parameters must be local variables or simple subscript expressions on vecs, dicts, keysets, or arrays (NastCheck[3050])
